[package]
name = "hypervisor-launcher"
authors = ["NotAndreh"]
version = "1.3.1"
edition = "2024"
build = "build.rs"

[dependencies]
rust-ini = "0.21.3"
tempfile = "3.27.0"
walkdir = "2.5.0"
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging"
] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
